registerUser function added to controllers>user.js

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI="mongodb+srv://kazireazul:admin@cluster0.0yfiax0.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URI="mongodb+srv://kazireazul:admin@cluster0.0yfiax0.mongodb.net/login-reg-mern-backend?retryWrites=true&w=majority"
 PORT=8000
